--- a/public/syllabus/index.html
+++ b/public/syllabus/index.html
@@ -255,9 +255,13 @@ table tbody tr:nth-child(odd){
 To uphold the Duke Community Standard:</p>
 <p>Students affirm their commitment to uphold the values of the Duke University community by signing a pledge that states:</p>
 <blockquote>
-<p>I will not lie, cheat, or steal in my academic endeavors;
-I will conduct myself honorably in all my endeavors;
-I will act if the Standard is compromised</p>
+<p>I will not lie, cheat, or steal in my academic endeavors;</p>
+</blockquote>
+<blockquote>
+<p>I will conduct myself honorably in all my endeavors;</p>
+</blockquote>
+<blockquote>
+<p>I will act if the Standard is compromised</p>
 </blockquote>
 <p>Regardless of course delivery format, it is the responsibility of all students to understand and follow Duke policies regarding academic integrity, including doing one&rsquo;s own work, following proper citation of sources, and adhering to guidance around group work
 projects. Ignoring these requirements is a violation of the Duke Community Standard. If you have any questions about how to follow these requirements, please contact <a href="mailto:jeanna.mccullers@duke.edu">Jeanna McCullers</a>, Director of the Office of Student Conduct.</p>
