--- a/public/syllabus/index.html
+++ b/public/syllabus/index.html
@@ -287,7 +287,7 @@ projects. Ignoring these requirements is a violation of the Duke Community Stand
 <p>Any violations in academic honesty standards as outlined in the <a href="https://studentaffairs.duke.edu/conduct/about-us/duke-community-standard">Duke Community Standard</a> and those specific to this course will automatically result in a 0 for the assignment and will be reported to the <a href="https://studentaffairs.duke.edu/conduct">Office of Student Conduct</a> for further action.</p>
 <h3 id="course-communication">Course communication</h3>
 <p>All lecture notes, assignment instructions, up-to-date schedule, and other course materials may be found on the course website, <a href="https://sta210-sp21.netlify.app/,">https://sta210-sp21.netlify.app/,</a> specifically on the <a href="https://sta210-sp21.netlify.app/schedule/"><strong>Schedule</strong></a> page.</p>
-<p>We will also use Sakai to email periodic announcements to the class. Please regulalry check your email or check the <strong>Announcements</strong> tab in Sakai to ensure you have up-to-date information about the course.</p>
+<p>We will also use Sakai to email periodic announcements to the class. Please regularly check your email or check the <strong>Announcements</strong> tab in Sakai to ensure you have up-to-date information about the course.</p>
 <h3 id="asking-for-help">Asking for help</h3>
 <ul>
 <li><strong>If you have a question during lecture or lab, please to ask it!</strong> There are likely other students with the same question, so by asking you will create a learning opportunity for everyone.</li>
@@ -356,8 +356,8 @@ projects. Ignoring these requirements is a violation of the Duke Community Stand
 <p><strong>Section 04L:</strong> Though you do not have a scheduled lab time, you will be assigned a team to work on the weekly lab assignment. You will be sent a short video to introduce each lab, and the teaching team will provide lab hours specifically for asynchronous lab students.</p>
 <p>Your lowest lab grade will be dropped at the end of the semester.</p>
 <h3 id="homework">Homework</h3>
-<p>In most homework assignemnts, you will apply what you&rsquo;ve learned during lecture and lab to complete data analysis tasks. You may discuss homework assignments with other students; however, homework should be completed and submitted individually. Homework must be typed up using R Markdown and GitHub and submitted to Gradescope.</p>
-<p>One homework assignment will be dedicated towards engaging with statistics outside of the classroom by attending statistics-related talks, particpating in a data analysis competition, listening to related podcasts, etc. More details will be provided during the semester.</p>
+<p>In most homework assignments, you will apply what you&rsquo;ve learned during lecture and lab to complete data analysis tasks. You may discuss homework assignments with other students; however, homework should be completed and submitted individually. Homework must be typed up using R Markdown and GitHub and submitted to Gradescope.</p>
+<p>One homework assignment will be dedicated towards engaging with statistics outside of the classroom by attending statistics-related talks, participating in a data analysis competition, listening to related podcasts, etc. More details will be provided during the semester.</p>
 <p>Your lowest homework grade will be dropped at the end of the semester.</p>
 <h3 id="quizzes">Quizzes</h3>
 <p>The quizzes are an opportunity to assess the knowledge and skills you’ve learned. They will include both the conceptual and mathematical aspects of regression. More details will be provided before each quiz.</p>
@@ -365,7 +365,7 @@ projects. Ignoring these requirements is a violation of the Duke Community Stand
 <h3 id="final-project">Final Project</h3>
 <p>The purpose of the project is to apply what you’ve learned throughout the semester to explore an interesting data-based research question using regression. The project will be completed with your lab teams, and each team will present their work in video and in writing during the final exam period. More information about the project will be provided later in the semester.</p>
 <h3 id="participation">Participation</h3>
-<p>The participation cmoponent of the grade will be based on two components:</p>
+<p>The participation component of the grade will be based on two components:</p>
 <ul>
 <li>
 <p><strong>Participating in lecture.</strong> This includes watching the lecture content videos and completing the Application Exercises (AEs) from the corresponding live lecture session. AEs are due on GitHub within one week of the live lecture. AEs will graded based on making a good-faith effort on the activity. You will receive full credit for this portion of the participation grade if you watch the lecture content video and complete the AE in a timely manner for at least 80% of the lectures.</p>
@@ -471,7 +471,7 @@ projects. Ignoring these requirements is a violation of the Duke Community Stand
 </table>
 </center>
 <h3 id="late-work--extensions">Late work + extensions</h3>
-<p>The due dates for assignments are there to help you keep up with the course material and to ensure the teaching team can provide feedback within a timely manner. We understand that things come up periodically that could make it difficult to submit an assignment by the deadline. Note that the lowest homework and lab assignment will be dropped and the lowest quiz grade will be down-weighted to accoommdate such cirumstances.</p>
+<p>The due dates for assignments are there to help you keep up with the course material and to ensure the teaching team can provide feedback within a timely manner. We understand that things come up periodically that could make it difficult to submit an assignment by the deadline. Note that the lowest homework and lab assignment will be dropped and the lowest quiz grade will be down-weighted to accommodate such circumstances.</p>
 <p><strong>Late work policy</strong></p>
 <ul>
 <li>Homework and labs may be submitted up to 3 days late with a 5% penalty each day.</li>
@@ -480,7 +480,7 @@ projects. Ignoring these requirements is a violation of the Duke Community Stand
 </ul>
 <p><strong>Waiver for extenuating circumstances</strong></p>
 <p>If there are circumstances that prevent you from completing a lab or homework assignment by the stated due date, please email Professor Tackett before the deadline, to waive the late penalty. In your email, you only need to request the waiver; you do not need to provide explanation. This waiver may only be used once, so only use it for a truly extenuating circumstance.</p>
-<p>If there are circumstnaces that are having a longer-term impact on your academic performance, please notify your academic dean.</p>
+<p>If there are circumstances that are having a longer-term impact on your academic performance, please notify your academic dean.</p>
 <h3 id="regrade-requests">Regrade Requests</h3>
 <p>Regrade requests must be submitted on Gradescope within a week of when an assignment is returned. Regrade requests will be considered if there was an error in the grade calculation or if you feel a correct answer was mistakenly marked as incorrect. Requests to dispute the number of points deducted for an incorrect response will not be considered. Note that by submitting a regrade request, the entire question may be regraded and you may potentially lose points.</p>
 <p>No grades will be changed after the final project presentations.</p>
