--- a/public/syllabus/index.html
+++ b/public/syllabus/index.html
@@ -272,30 +272,36 @@ projects. Ignoring these requirements is a violation of the Duke Community Stand
 <li>If you feel like your performance in the class is being impacted by your experiences outside of class, please don&rsquo;t hesitate to come and talk with me. If you prefer to speak with someone outside of the course, your academic dean is an excellent resource.</li>
 <li>I (like many people) am still in the process of learning about diverse perspectives and identities. If something was said in class (by anyone) that made you feel uncomfortable, please talk to me about it.</li>
 </ul>
-<h3 id="accessibility">Accessibility</h3>
+<h2 id="accessibility">Accessibility</h2>
 <p>In addition to accessibility issues experienced during the typical academic year, I recognize that remote learning may present additional challenges. Students may be experiencing unreliable wi-fi, lack of access to quiet study spaces, varied time-zones, or additional responsibilities while studying at home. If you are experiencing these or other difficulties, please contact me to discuss possible accommodations.</p>
 <p><strong>Academic accommodations</strong></p>
 <p>The <a href="https://access.duke.edu/students">Student Disability Access Office (SDAO)</a> will continue to be available to ensure that students are able to engage with their courses and related assignments. Students should be in touch with the Student Disability Access Office to <a href="https://access.duke.edu/requests">request or update</a> accommodations under these circumstances. Zoom has the ability to provide live closed captioning. If you are not seeing this, and but would like to see this feature, please reach out to your instructor for assistance.</p>
-<h3 id="academic-honesty">Academic honesty</h3>
+<h2 id="academic-conduct">Academic conduct</h2>
 <p><strong>TL;DR: Don&rsquo;t cheat!</strong></p>
 <p>Please abide by the following as you work on assignments in this course:</p>
 <ul>
-<li>On individual assignments such as homework, you may discuss the assignment with other students; however, you may not directly share code or your write up with any other student. On team assignments such as labs, you may discuss the assignment with other teams; however, you may not directly share code or your write up with another team. Unauthorized sharing of the code or the write up is considered a violation of the standards for academic honesty for all students involved.</li>
-<li><strong>Reusing code</strong>: Unless explicitly stated otherwise, you may make use of online resources (e.g. StackOverflow) for coding examples on assignments. If you directly use code from an outside source (or use it as inspiration), you must explicitly cite where you obtained the code. Any recycled code that is discovered and is not explicitly cited will be treated as plagiarism and a violation of the standards for academic honesty.</li>
-<li>You may not discuss or otherwise work with anyone on quizzes. Unauthorized collaboration or use of unauthorized materials is considered a violation of the standards for academic honesty for all students involved. More specific details about academic honesty will be provided with the quiz instructions.</li>
+<li>
+<p>On individual assignments such as homework, you may discuss the assignment with other students; however, you may not directly share code or your write up with any other student. On team assignments such as labs, you may discuss the assignment with other teams; however, you may not directly share code or your write up with another team. Unauthorized sharing of the code or the write up is considered an instance of academic misconduct for all students involved.</p>
+</li>
+<li>
+<p><strong>Reusing code</strong>: Unless explicitly stated otherwise, you may make use of online resources (e.g. StackOverflow) for coding examples on assignments. If you directly use code from an outside source (or use it as inspiration), you must explicitly cite where you obtained the code. Any recycled code that is discovered and is not explicitly cited will be treated as plagiarism and an instance of academic misconduct.</p>
+</li>
+<li>
+<p>You may not discuss or otherwise work with anyone on quizzes. Unauthorized collaboration or use of unauthorized materials is considered a violation of the standards for academic honesty for all students involved. More specific details about standards for academic conduct will be provided with the quiz instructions.</p>
+</li>
 </ul>
-<p>Any violations in academic honesty standards as outlined in the <a href="https://studentaffairs.duke.edu/conduct/about-us/duke-community-standard">Duke Community Standard</a> and those specific to this course will automatically result in a 0 for the assignment and will be reported to the <a href="https://studentaffairs.duke.edu/conduct">Office of Student Conduct</a> for further action.</p>
-<h3 id="course-communication">Course communication</h3>
+<p>Any violations in the standards for academic conduct as outlined in the <a href="https://studentaffairs.duke.edu/conduct/about-us/duke-community-standard">Duke Community Standard</a> and those specific to this course will automatically result in a 0 for the assignment and will be reported to the <a href="https://studentaffairs.duke.edu/conduct">Office of Student Conduct</a> for further action.</p>
+<h2 id="course-communication">Course communication</h2>
 <p>All lecture notes, assignment instructions, up-to-date schedule, and other course materials may be found on the course website, <a href="https://sta210-sp21.netlify.app/,">https://sta210-sp21.netlify.app/,</a> specifically on the <a href="https://sta210-sp21.netlify.app/schedule/"><strong>Schedule</strong></a> page.</p>
 <p>We will also use Sakai to email periodic announcements to the class. Please regularly check your email or check the <strong>Announcements</strong> tab in Sakai to ensure you have up-to-date information about the course.</p>
-<h3 id="asking-for-help">Asking for help</h3>
+<h2 id="asking-for-help">Asking for help</h2>
 <ul>
 <li><strong>If you have a question during lecture or lab, please to ask it!</strong> There are likely other students with the same question, so by asking you will create a learning opportunity for everyone.</li>
 <li>The teaching team is here to help you be successful in the course. You are encouraged to attend office hours during the times posted on the home page to ask questions about the course content and assignments. A lot of questions are most effectively answered through discussion rather than email, so office hours are a valuable resource. Please use them!</li>
 <li>Outside of class and office hours, any general questions about course content or assignments should be posted on Piazza. There is a chance another student has already asked a similar question, so please check the other posts on Piazza before adding a new question. If you know the answer to a question posted on Piazza, I encourage you to respond!</li>
 </ul>
 <p>Check out the <a href="/help/">Help</a> tab for more information about finding help and additional resources.</p>
-<h3 id="email">Email</h3>
+<h2 id="email">Email</h2>
 <p>If there is a question that&rsquo;s not appropriate for the public forum (Piazza), you are welcome to email me directly. <strong>If you email me, please include &ldquo;STA 210&rdquo; in the subject line.</strong> Barring extenuating circumstances, I will respond to STA 210 emails within 48 hours Monday - Friday. I have more limited access to email on weekends.</p>
 <h2 id="activities--assessment">Activities &amp; Assessment</h2>
 <p>The following activities and assessments will help you successfully achieve the course learning objectives. By experiencing the course content in different ways, you will not only gain a better understanding of regression analysis, but you will also get experiences that can guide you as you apply what you&rsquo;ve learned in future academic and professional settings.</p>
@@ -470,7 +476,7 @@ projects. Ignoring these requirements is a violation of the Duke Community Stand
 </tbody>
 </table>
 </center>
-<h3 id="late-work--extensions">Late work + extensions</h3>
+<h2 id="late-work--extensions">Late work &amp; extensions</h2>
 <p>The due dates for assignments are there to help you keep up with the course material and to ensure the teaching team can provide feedback within a timely manner. We understand that things come up periodically that could make it difficult to submit an assignment by the deadline. Note that the lowest homework and lab assignment will be dropped and the lowest quiz grade will be down-weighted to accommodate such circumstances.</p>
 <p><strong>Late work policy</strong></p>
 <ul>
@@ -481,12 +487,12 @@ projects. Ignoring these requirements is a violation of the Duke Community Stand
 <p><strong>Waiver for extenuating circumstances</strong></p>
 <p>If there are circumstances that prevent you from completing a lab or homework assignment by the stated due date, please email Professor Tackett before the deadline, to waive the late penalty. In your email, you only need to request the waiver; you do not need to provide explanation. This waiver may only be used once, so only use it for a truly extenuating circumstance.</p>
 <p>If there are circumstances that are having a longer-term impact on your academic performance, please notify your academic dean.</p>
-<h3 id="regrade-requests">Regrade Requests</h3>
+<h2 id="regrade-requests">Regrade Requests</h2>
 <p>Regrade requests must be submitted on Gradescope within a week of when an assignment is returned. Regrade requests will be considered if there was an error in the grade calculation or if you feel a correct answer was mistakenly marked as incorrect. Requests to dispute the number of points deducted for an incorrect response will not be considered. Note that by submitting a regrade request, the entire question may be regraded and you may potentially lose points.</p>
 <p>No grades will be changed after the final project presentations.</p>
-<h3 id="additional-resources">Additional resources</h3>
+<h2 id="additional-resources">Additional resources</h2>
 <p>Please see the <a href="../resources/">Resources</a> page for additional academic and wellness resources.</p>
-<h3 id="important-dates">Important dates</h3>
+<h2 id="important-dates">Important dates</h2>
 <p>You can find important dates on the  <a href="https://registrar.duke.edu/spring-2021-academic-calendar">Spring 2021 Academic Calendar</a>.</p>
 
       </div>
@@ -501,8 +507,17 @@ projects. Ignoring these requirements is a violation of the Duke Community Stand
   <ul>
     <li><a href="#course-learning-objectives">Course learning objectives</a></li>
     <li><a href="#course-community">Course community</a></li>
+    <li><a href="#accessibility">Accessibility</a></li>
+    <li><a href="#academic-conduct">Academic conduct</a></li>
+    <li><a href="#course-communication">Course communication</a></li>
+    <li><a href="#asking-for-help">Asking for help</a></li>
+    <li><a href="#email">Email</a></li>
     <li><a href="#activities--assessment">Activities &amp; Assessment</a></li>
     <li><a href="#grading">Grading</a></li>
+    <li><a href="#late-work--extensions">Late work &amp; extensions</a></li>
+    <li><a href="#regrade-requests">Regrade Requests</a></li>
+    <li><a href="#additional-resources">Additional resources</a></li>
+    <li><a href="#important-dates">Important dates</a></li>
   </ul>
 </nav>
         </div>
