note about final project.

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -235,7 +235,8 @@ table tbody tr:nth-child(odd){
       <h1 class="article-title">STA 210 Final Project</h1>
 
       <div class="article-content">
-      <!--
+      <p>Details about the project will be posted at a later date.</p>
+<!--
 ## Timeline
 
 Proposal due **Friday, October 9**
