--- a/public/resources/index.html
+++ b/public/resources/index.html
@@ -235,7 +235,7 @@ table tbody tr:nth-child(odd){
       <h1 class="article-title">Resources</h1>
 
       <div class="article-content">
-      <h2 id="r-resources">R Resources</h2>
+      <h2 id="r-resources">R resources</h2>
 <p><strong>Getting started</strong></p>
 <ul>
 <li><a href="https://github.com/rstudio/cheatsheets/raw/master/rstudio-ide.pdf">RStudio IDE Cheatsheet</a></li>
@@ -306,7 +306,7 @@ visit <a href="https://studentaffairs.duke.edu/duwell/holistic-wellness">student
           <div class="sectionTitle">Contents</div>
           <nav id="TableOfContents">
   <ul>
-    <li><a href="#r-resources">R Resources</a></li>
+    <li><a href="#r-resources">R resources</a></li>
     <li><a href="#statistics-resources">Statistics resources</a></li>
     <li><a href="#mental-heath-and-wellness-support">Mental heath and wellness support</a></li>
     <li><a href="#wellness-day-2021">Wellness day 2021</a></li>
