add office hours.

--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -1121,7 +1121,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Tue, Mar 30</td>
-            <td style="width:40%;text-align:left">Logistic reg: Inference</td>
+            <td style="width:40%;text-align:left">Logistic regression: Inference</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1146,7 +1146,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right"></td>
-            <td style="width:40%;text-align:left">Logistic reg: Conditions</td>
+            <td style="width:40%;text-align:left">Logistic regression: Conditions</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
