--- a/public/index.html
+++ b/public/index.html
@@ -372,7 +372,7 @@ table tbody tr:nth-child(odd){
 <tr>
 <td>Instructor</td>
 <td><a href="mailto:maria.tackett@duke.edu">Prof. Maria Tackett</a></td>
-<td>TBD</td>
+<td>Wed 10a - 12p</td>
 </tr>
 <tr>
 <td>TA</td>
