add lab markers

--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -396,7 +396,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 02</td>
             <td align="right" style="width:25%;text-align:right">Mon, Jan 25 </td>
-            <td style="width:40%;text-align:left"></td>
+            <td style="width:40%;text-align:left">Lab 01</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -496,7 +496,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 03</td>
             <td align="right" style="width:25%;text-align:right">Mon, Feb 01</td>
-            <td style="width:40%;text-align:left"></td>
+            <td style="width:40%;text-align:left">Lab 02</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -594,7 +594,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 04</td>
             <td align="right" style="width:25%;text-align:right">Mon, Feb 08</td>
-            <td style="width:40%;text-align:left"></td>
+            <td style="width:40%;text-align:left">Lab 03</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -717,7 +717,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 05</td>
             <td align="right" style="width:25%;text-align:right">Mon, Feb 15</td>
-            <td style="width:40%;text-align:left"></td>
+            <td style="width:40%;text-align:left">Lab 04</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -792,7 +792,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 06</td>
             <td align="right" style="width:25%;text-align:right">Mon, Feb 22</td>
-            <td style="width:40%;text-align:left"></td>
+            <td style="width:40%;text-align:left">Lab 05</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -915,7 +915,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 07</td>
             <td align="right" style="width:25%;text-align:right">Mon, Mar 01</td>
-            <td style="width:40%;text-align:left"></td>
+            <td style="width:40%;text-align:left">Writing lab</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1013,7 +1013,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 08</td>
             <td align="right" style="width:25%;text-align:right">Mon, Mar 08</td>
-            <td style="width:40%;text-align:left"></td>
+            <td style="width:40%;text-align:left">Lab 06</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1111,7 +1111,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 09</td>
             <td align="right" style="width:25%;text-align:right">Mon, Mar 15</td>
-            <td style="width:40%;text-align:left"></td>
+            <td style="width:40%;text-align:left">Lab 07</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1211,7 +1211,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 10</td>
             <td align="right" style="width:25%;text-align:right">Mon, Mar 22</td>
-            <td style="width:40%;text-align:left"></td>
+            <td style="width:40%;text-align:left">Lab 08</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1309,7 +1309,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 11</td>
             <td align="right" style="width:25%;text-align:right">Mon, Mar 29</td>
-            <td style="width:40%;text-align:left"></td>
+            <td style="width:40%;text-align:left">Writing lab</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1432,7 +1432,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 12</td>
             <td align="right" style="width:25%;text-align:right">Mon, Apr 05</td>
-            <td style="width:40%;text-align:left"></td>
+            <td style="width:40%;text-align:left">Lab 09</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1705,7 +1705,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 14</td>
             <td align="right" style="width:25%;text-align:right">Mon, Apr 19</td>
-            <td style="width:40%;text-align:left"></td>
+            <td style="width:40%;text-align:left">Writing lab</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
