--- a/public/syllabus/index.html
+++ b/public/syllabus/index.html
@@ -300,7 +300,7 @@ projects. Ignoring these requirements is a violation of the Duke Community Stand
 <li>The teaching team is here to help you be successful in the course. You are encouraged to attend office hours during the times posted on the home page to ask questions about the course content and assignments. A lot of questions are most effectively answered through discussion rather than email, so office hours are a valuable resource. Please use them!</li>
 <li>Outside of class and office hours, any general questions about course content or assignments should be posted on Piazza. There is a chance another student has already asked a similar question, so please check the other posts on Piazza before adding a new question. If you know the answer to a question posted on Piazza, I encourage you to respond!</li>
 </ul>
-<p>Check out the <a href="/help/">Help</a> tab for more information about finding help and additional resources.</p>
+<p>See the <a href="/resources/">Resources</a> tab for information about additional resources for the course.</p>
 <h2 id="email">Email</h2>
 <p>If there is a question that&rsquo;s not appropriate for the public forum (Piazza), you are welcome to email me directly. <strong>If you email me, please include &ldquo;STA 210&rdquo; in the subject line.</strong> Barring extenuating circumstances, I will respond to STA 210 emails within 48 hours Monday - Friday. I have more limited access to email on weekends.</p>
 <h2 id="activities--assessment">Activities &amp; Assessment</h2>
