--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -245,7 +245,7 @@ table tbody tr:nth-child(odd){
   
   
     <div class="section">
-        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-01/">Week 01</a>
+        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-01/">Week 01: Jan 18 - Jan 22</a>
         </div>
     </div>
     
