make pdf of syllabus

--- a/public/syllabus/index.html
+++ b/public/syllabus/index.html
@@ -490,7 +490,7 @@ projects. Ignoring these requirements is a violation of the Duke Community Stand
 <li>There is no late work accepted for application exercises or quizzes.</li>
 <li>The late work policy for the project will be provided with the project instructions.</li>
 </ul>
-<h3 id="waiver-for-extenuating-circumstances">Waiver for extenuating circumstances**</h3>
+<h3 id="waiver-for-extenuating-circumstances">Waiver for extenuating circumstances</h3>
 <p>If there are circumstances that prevent you from completing a lab or homework assignment by the stated due date, please email Professor Tackett before the deadline, to waive the late penalty. In your email, you only need to request the waiver; you do not need to provide explanation. This waiver may only be used once, so only use it for a truly extenuating circumstance.</p>
 <p>If there are circumstances that are having a longer-term impact on your academic performance, please notify your academic dean.</p>
 <h2 id="regrade-requests">Regrade Requests</h2>
