add github link

--- a/public/schedule/week-01/index.html
+++ b/public/schedule/week-01/index.html
@@ -339,7 +339,6 @@ table tbody tr:nth-child(odd){
     <li><a href="#lectures">Lectures</a></li>
     <li><a href="#readings">Readings</a></li>
     <li><a href="#assignments">Assignments</a></li>
-    <li><a href="#other-resources">Other resources</a></li>
   </ul>
 </nav></div>
         </div>
@@ -412,7 +411,7 @@ font-size: 18px;
 </thead>
 <tbody>
 <tr>
-<td>Submit GitHub username</td>
+<td><a href="https://forms.gle/BPuz617YJWdt7HEv7">Submit GitHub username</a></td>
 <td><strong>due Sun, Jan 24 at 11:59p</strong></td>
 </tr>
 <tr>
@@ -421,16 +420,6 @@ font-size: 18px;
 </tr>
 </tbody>
 </table>
-<h2 id="other-resources">Other resources&nbsp;<a class="hanchor" ariaLabel="Anchor" href="#other-resources">🔗&#xFE0E;</a> </h2>
-<p>Complete the following <a href="https://duke-learning-r.netlify.app/">Duke StatSci Learning R</a> tutorials to prepare for Thursday&rsquo;s lab.</p>
-<p>All tutorials can be found under the <strong>Getting Started</strong> tab:</p>
-<ul>
-<li>Basics of R and RStudio</li>
-<li>Basics of R and R Markdown</li>
-<li>Into the Tidyverse</li>
-<li>Clone repo + start new project</li>
-<li>Commit + Push + Pull</li>
-</ul>
 
 
       </div>
