--- a/public/home/band_three/index.html
+++ b/public/home/band_three/index.html
@@ -286,6 +286,11 @@ table tbody tr:nth-child(odd){
 </tr>
 <tr>
 <td>TA</td>
+<td><a href="mailto:joseph.lawson@duke.edu">Joseph Lawson</a></td>
+<td>TBD</td>
+</tr>
+<tr>
+<td>TA</td>
 <td><a href="mailto:ezinne.nwankwo@duke.edu">Ezinne Nwankwo</a></td>
 <td>TBD</td>
 </tr>
