--- a/public/schedule/week-01/index.html
+++ b/public/schedule/week-01/index.html
@@ -359,14 +359,14 @@ font-size: 18px;
 <tbody>
 <tr>
 <td>Thursday</td>
-<td>Welcome to STA 210</td>
+<td></td>
 <td>Welcome to STA 210</td>
 <td>First day of class</td>
 </tr>
 <tr>
 <td></td>
 <td></td>
-<td>Tour of website + Sakai</td>
+<td><a href="https://warpwire.duke.edu/w/_wsFAA/">Tour of course website + Sakai</a></td>
 <td></td>
 </tr>
 <tr>
