update piazza statement

--- a/public/syllabus/index.html
+++ b/public/syllabus/index.html
@@ -283,7 +283,8 @@ projects. Ignoring these requirements is a violation of the Duke Community Stand
 <h3 id="communication">Communication</h3>
 <p>Regular announcements will be sent to the class through Sakai. Please check your email or check the <strong>Announcements</strong> tab in Sakai regularly to ensure you have up-to-date information about the course.</p>
 <p><strong>Online communication</strong></p>
-<p>If you have general questions about the course logistics, content, or assignments, you may post them on the online discussion platform. Note that this forum should only be used for questions or comments that may be viewed by the entire class.</p>
+<p>If you have general questions about the course logistics, content, or assignments, you may post them on the online discussion platform Piazza. Note that this forum should only be used for questions or comments that may be viewed by the entire class.</p>
+<p>Piazza is accessible through the course page by clicking on the Piazza link on the top of course webpage or through Sakai. Note that it may ask you to make a financial contribution. You are <strong>not</strong> required to make a contribution participate in the class discussion on Piazza.</p>
 <p><strong>Email</strong></p>
 <p>If there is a question that&rsquo;s not appropriate for the online discussion platform, you are welcome to email me directly. <strong>If you email me, please include &ldquo;STA 210&rdquo; in the subject line.</strong> Barring extenuating circumstances, I will respond to STA 210 emails within 48 hours Monday - Friday.</p>
 <h2 id="activities--assessment">Activities &amp; Assessment</h2>
