update pdf of syllabus

--- a/content/syllabus/sta210-sp21-syllabus.html
+++ b/content/syllabus/sta210-sp21-syllabus.html
@@ -1,11 +1,101 @@
 ---
-title: Syllabus
+title: STA 210 Syllabus
+subtitle: Spring 2021
 output: pdf_document
 ---
 
 
 
-<p><strong><a href="sta210-sp21-syllabus.pdf">Click here</a> to download a PDF copy of the syllabus.</strong></p>
+<div id="teaching-team" class="section level2">
+<h2>Teaching Team</h2>
+<table>
+<tbody>
+<tr class="odd">
+<td>Instructor</td>
+<td>Prof. Maria Tackett</td>
+<td><a href="mailto:maria.tackett@duke.edu" class="email">maria.tackett@duke.edu</a></td>
+</tr>
+<tr class="even">
+<td>TAs</td>
+<td>Martha Aboagye</td>
+<td><a href="mailto:martha.aboagye@duke.edu" class="email">martha.aboagye@duke.edu</a></td>
+</tr>
+<tr class="odd">
+<td></td>
+<td>Betsy Bersson</td>
+<td><a href="mailto:elizabeth.berrson@duke.edu" class="email">elizabeth.berrson@duke.edu</a></td>
+</tr>
+<tr class="even">
+<td></td>
+<td>Meredith Brown</td>
+<td><a href="mailto:meredith.brown@duke.edu" class="email">meredith.brown@duke.edu</a></td>
+</tr>
+<tr class="odd">
+<td></td>
+<td>Cody Coombs</td>
+<td><a href="mailto:cody.coombs@duke.edu" class="email">cody.coombs@duke.edu</a></td>
+</tr>
+<tr class="even">
+<td></td>
+<td>Sophie Dalldorf</td>
+<td><a href="mailto:sophia.dalldorf@duke.edu" class="email">sophia.dalldorf@duke.edu</a></td>
+</tr>
+<tr class="odd">
+<td></td>
+<td>Joseph Lawson</td>
+<td><a href="mailto:joseph.lawson@duke.edu" class="email">joseph.lawson@duke.edu</a></td>
+</tr>
+<tr class="even">
+<td></td>
+<td>Ezinne Nwankwo</td>
+<td><a href="mailto:ezinne.nwankwo@duke.edu" class="email">ezinne.nwankwo@duke.edu</a></td>
+</tr>
+<tr class="odd">
+<td></td>
+<td>Sophie Riegel</td>
+<td><a href="mailto:sophie.riegel@duke.edu" class="email">sophie.riegel@duke.edu</a></td>
+</tr>
+<tr class="even">
+<td>R Support TA</td>
+<td>George Lindner</td>
+<td><a href="mailto:george.lindner@duke.edu" class="email">george.lindner@duke.edu</a></td>
+</tr>
+</tbody>
+</table>
+</div>
+<div id="class-meetings" class="section level2">
+<h2>Class meetings</h2>
+<p><strong>See Sakai for Zoom links to all class meetings.</strong></p>
+<table>
+<tbody>
+<tr class="odd">
+<td>Lecture</td>
+<td>All students</td>
+<td>Tue and Thur 10:15a - 11:30a EST</td>
+</tr>
+<tr class="even">
+<td>Labs</td>
+<td>Lab 01L</td>
+<td>Mon 12p - 1:15p</td>
+</tr>
+<tr class="odd">
+<td></td>
+<td>Lab 02L</td>
+<td>Mon 1:45p - 3p</td>
+</tr>
+<tr class="even">
+<td></td>
+<td>Lab 03L</td>
+<td>Mon 5:15p - 6:30p</td>
+</tr>
+<tr class="odd">
+<td></td>
+<td>Asynchronous</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</div>
 <div id="course-learning-objectives" class="section level2">
 <h2>Course learning objectives</h2>
 <p>By the end of the semester, you will be able to…</p>
