--- a/public/home/band_three/index.html
+++ b/public/home/band_three/index.html
@@ -306,7 +306,7 @@ table tbody tr:nth-child(odd){
 </tr>
 <tr>
 <td>R Support TA</td>
-<td><a href="mailto:georger.lindner@duke.edu">George Lindner</a></td>
+<td><a href="mailto:george.lindner@duke.edu">George Lindner</a></td>
 <td>TBD</td>
 </tr>
 </tbody>
