add welcome slides

--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -343,11 +343,10 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 01</td>
             <td align="right" style="width:25%;text-align:right">Thu, Jan 21</td>
-            <td style="width:40%;text-align:left">Welcome to STA 210!</td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-laptop fa-lg"></i></font>
-            </td>
+            <td style="width:40%;text-align:left">Welcome to Regression Analysis!</td>
+            <td align="center" style="width:10%;text-align:center"><a
+                    href="/slides/01-welcome.html">
+                    <i class="fas fa-laptop fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="far fa-file-code fa-lg"></i></font>
