--- a/public/schedule/week-01/index.html
+++ b/public/schedule/week-01/index.html
@@ -365,7 +365,7 @@ font-size: 18px;
 <tr>
 <td>Thursday</td>
 <td></td>
-<td>Welcome to STA 210</td>
+<td><a href="https://sta210-sp21.netlify.app/slides/01-welcome.html">Welcome to Regression Analysis</a></td>
 <td>First day of class</td>
 </tr>
 <tr>
