add day 1 stuff

--- a/public/schedule/week-01/index.html
+++ b/public/schedule/week-01/index.html
@@ -364,8 +364,8 @@ font-size: 18px;
 <tbody>
 <tr>
 <td>Thursday</td>
-<td></td>
 <td><a href="https://sta210-sp21.netlify.app/slides/01-welcome.html">Welcome to Regression Analysis</a></td>
+<td><a href="https://warpwire.duke.edu/w/jQ0FAA/">Welcome to Regression Analysis</a></td>
 <td>First day of class</td>
 </tr>
 <tr>
