--- a/public/schedule/week-01/index.html
+++ b/public/schedule/week-01/index.html
@@ -366,7 +366,7 @@ font-size: 18px;
 <td>Thursday</td>
 <td><a href="https://sta210-sp21.netlify.app/slides/01-welcome.html">Welcome to Regression Analysis</a></td>
 <td><a href="https://warpwire.duke.edu/w/jQ0FAA/">Welcome to Regression Analysis</a></td>
-<td><a href="https://sta210-fa20.netlify.app/appex/ae-01-welcome.html">AE 01: Welcome!</a></td>
+<td><a href="https://sta210-sp21.netlify.app/appex/ae-01-welcome.html">AE 01: Welcome!</a></td>
 </tr>
 <tr>
 <td></td>
