add TA office hours

--- a/public/home/band_three/index.html
+++ b/public/home/band_three/index.html
@@ -265,44 +265,44 @@ table tbody tr:nth-child(odd){
 <td>Wed 10a - 12p</td>
 </tr>
 <tr>
-<td>TA</td>
+<td>TAs</td>
 <td><a href="mailto:martha.aboagye@duke.edu">Martha Aboagye</a></td>
-<td>TBD</td>
+<td>Wed 6p - 8p</td>
 </tr>
 <tr>
-<td>TA</td>
+<td></td>
 <td><a href="mailto:elb75@duke.edu">Betsy Bersson</a></td>
-<td>TBD</td>
+<td>Fri 8a - 10a</td>
 </tr>
 <tr>
-<td>TA</td>
+<td></td>
 <td><a href="mailto:meredith.brown@duke.edu">Meredith Brown</a></td>
-<td>TBD</td>
+<td>Tue 4:30p - 6:30p</td>
 </tr>
 <tr>
-<td>TA</td>
+<td></td>
 <td><a href="mailto:cody.coombs@duke.edu">Cody Coombs</a></td>
-<td>TBD</td>
+<td>Wed 1p - 3p</td>
 </tr>
 <tr>
-<td>TA</td>
+<td></td>
 <td><a href="mailto:sophia.dalldorf@duke.edu">Sophie Dalldorf</a></td>
-<td>TBD</td>
+<td>Thu 3p - 5p</td>
 </tr>
 <tr>
-<td>TA</td>
+<td></td>
 <td><a href="mailto:joseph.lawson@duke.edu">Joseph Lawson</a></td>
-<td>TBD</td>
+<td>Thu 6p - 8p</td>
 </tr>
 <tr>
-<td>TA</td>
+<td></td>
 <td><a href="mailto:ezinne.nwankwo@duke.edu">Ezinne Nwankwo</a></td>
-<td>TBD</td>
+<td>Mon 10a - 12p</td>
 </tr>
 <tr>
-<td>TA</td>
+<td></td>
 <td><a href="mailto:sophie.riegel@duke.edu">Sophie Riegel</a></td>
-<td>TBD</td>
+<td>Tue 8a - 10a</td>
 </tr>
 </tbody>
 </table>
