--- a/static/appex/01-course-overview.html
+++ b/static/appex/01-course-overview.html
@@ -62,15 +62,11 @@ class: center, middle, inverse, title-slide
 
 --
 
-- Display your name (first and last name)
+- Display your name (not NetID)
 
 --
 
-- Raise your hand 
-
---
-
-- Reactions
+- Reactions / Raise your hand 
 
 --
 
@@ -83,7 +79,7 @@ class: center, middle, inverse, title-slide
 
 --
 
-- Breakout rooms (not recorded)
+- Breakout rooms 
 
 ---
 
@@ -129,7 +125,7 @@ See the [Tour of course website + Sakai](https://warpwire.duke.edu/w/_wsFAA/) vi
 --
 
 .vocab[GitHub]: [https://github.com/sta210-sp21](https://github.com/sta210-sp21)
-  - Assignment repos (we'll talk more about that later)
+  - Assignment repos (you'll learn more about that in Lab 01)
 
 ---
 
