--- a/static/appex/ae-01-welcome.html
+++ b/static/appex/ae-01-welcome.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2021-01-20" />
+<meta name="date" content="2021-01-21" />
 
 <title>Welcome to STA 210!</title>
 
@@ -385,7 +385,7 @@ summary {
 
 
 <h1 class="title toc-ignore">Welcome to STA 210!</h1>
-<h4 class="date">2021-01-20</h4>
+<h4 class="date">2021-01-21</h4>
 
 </div>
 
@@ -428,7 +428,7 @@ summary {
 <li><p>Go to <a href="https://github.com/" class="uri">https://github.com/</a>, and create an account (unless you already have one).</p></li>
 <li><p>After you create your account, go to <a href="https://forms.gle/rmJGcHio4UeiwZXh8">https://forms.gle/rmJGcHio4UeiwZXh8</a> and enter your NetID and GitHub username.</p></li>
 </ul>
-<p>Some tips from <a href="http://happygitwithr.com/github-acct.html#username-advice">Happy Git and GitHub for the useR</a> to help you create a professional GitHub usernmae.</p>
+<p>Some tips from <a href="http://happygitwithr.com/github-acct.html#username-advice">Happy Git and GitHub for the useR</a> to help you create a professional GitHub username.</p>
 <ul>
 <li>Incorporate your actual name.</li>
 <li>Reuse your username from other contexts if you can, e.g. Twitter or Slack.</li>
@@ -443,29 +443,17 @@ summary {
 </div>
 <div id="tour-of-r-and-rstudio" class="section level2">
 <h2>Tour of R and RStudio</h2>
-<p>Let’s take a tour of R and RStudio. I’ll do a short demo, then give you a few minutes to try out yourself.</p>
+<p>Let’s take a tour of R and RStudio. I’ll do a short demo to help you navigate RStudio.</p>
+<p>You can access RStudio by going to <a href="https://vm-manage.oit.duke.edu/containers" class="uri">https://vm-manage.oit.duke.edu/containers</a> and logging into the Docker container titled “STA 210 - Regression Analysis”.</p>
 <div id="concepts-introduced" class="section level3">
 <h3>Concepts introduced</h3>
 <ul>
 <li>Console</li>
 <li>Using R as a calculator</li>
-<li>Environment</li>
-<li>Loading and viewing a data frame</li>
-<li>Accessing a variable in a data frame</li>
-<li>R functions</li>
+<li>RStudio environment</li>
+<li>Brief intro to R Markdown</li>
+<li>R Markdown vs. the console</li>
 </ul>
-</div>
-<div id="your-turn" class="section level3">
-<h3>Your turn!</h3>
-<ul>
-<li><p>Go to <a href="https://vm-manage.oit.duke.edu/containers" class="uri">https://vm-manage.oit.duke.edu/containers</a> and log into the Docker container titled “RStudio - statistics application with Rmarkdown and knitr support”. This is where you’ll use RStudio during the semester.</p></li>
-<li><p>Use R as a calculator by typing the following in the <strong>console</strong>.</p></li>
-</ul>
-<pre class="r"><code>3 * 5 + 10</code></pre>
-<pre class="r"><code>x &lt;- 3
-x + x^2</code></pre>
-<pre class="r"><code>x &lt;- 1:10
-x*7</code></pre>
 </div>
 </div>
 
