--- a/static/appex/ae-01-welcome.html
+++ b/static/appex/ae-01-welcome.html
@@ -400,15 +400,8 @@ summary {
 <div id="check-in" class="section level2">
 <h2>Check in</h2>
 </div>
-<div id="introduction" class="section level2">
-<h2>Introduction</h2>
-</div>
-<div id="course-overview" class="section level2">
-<h2>Course overview</h2>
-<p>Click <a href="01-course-overview.html">here</a> for slides.</p>
-<ul>
-<li>Watch the videos <a href="https://warpwire.duke.edu/w/jQ0FAA/">Welcome to Regression Analysis</a> and <a href="https://warpwire.duke.edu/w/_wsFAA/">Tour of course website + Sakai</a> for a more detailed overview.</li>
-</ul>
+<div id="introductions" class="section level2">
+<h2>Introductions</h2>
 </div>
 <div id="meet-your-classmates-7-minutes" class="section level2">
 <h2>Meet your classmates! (~ 7 minutes)</h2>
@@ -420,6 +413,13 @@ summary {
 <li>Year</li>
 <li>What is something you’re looking forward to this semester (either in this class or in general)?</li>
 </ul></li>
+</ul>
+</div>
+<div id="course-overview" class="section level2">
+<h2>Course overview</h2>
+<p>Click <a href="01-course-overview.html">here</a> for slides.</p>
+<ul>
+<li>Watch the videos <a href="https://warpwire.duke.edu/w/jQ0FAA/">Welcome to Regression Analysis</a> and <a href="https://warpwire.duke.edu/w/_wsFAA/">Tour of course website + Sakai</a> for a more detailed overview.</li>
 </ul>
 </div>
 <div id="get-github-username-5---7-minutse" class="section level2">
