add lab 01 instructions

--- a/public/appex/ae-01-welcome.html
+++ b/public/appex/ae-01-welcome.html
@@ -400,8 +400,8 @@ summary {
 <div id="check-in" class="section level2">
 <h2>Check in</h2>
 </div>
-<div id="introduction" class="section level2">
-<h2>Introduction</h2>
+<div id="introductions" class="section level2">
+<h2>Introductions</h2>
 </div>
 <div id="meet-your-classmates-7-minutes" class="section level2">
 <h2>Meet your classmates! (~ 7 minutes)</h2>
