add tuesday slides

--- a/public/schedule/week-02/index.html
+++ b/public/schedule/week-02/index.html
@@ -334,12 +334,83 @@ table tbody tr:nth-child(odd){
         
       <div class="section">
         <div class="listItem learn-top-nav">
-          <div class="tutorial"><nav id="TableOfContents"></nav></div>
+          <div class="tutorial"><nav id="TableOfContents">
+  <ul>
+    <li><a href="#lectures">Lectures</a></li>
+    <li><a href="#readings">Readings</a></li>
+    <li><a href="#assignments">Assignments</a></li>
+  </ul>
+</nav></div>
         </div>
       </div>
       
       <div class="article-content">
-      <p>Text</p>
+      <style>
+table {
+font-size: 18px;
+}
+
+</style>
+<h2 id="lectures">Lectures&nbsp;<a class="hanchor" ariaLabel="Anchor" href="#lectures">🔗&#xFE0E;</a> </h2>
+<table>
+<thead>
+<tr>
+<th></th>
+<th>Slides</th>
+<th>Videos</th>
+<th>Application Exercises (AE)</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Tuesday</td>
+<td><a href="https://sta210-sp21.netlify.app/slides/02-multivar-relationships.html">Exploring multivariable relationships</a></td>
+<td>Exploring multivariable relationships</td>
+<td>AE 02</td>
+</tr>
+<tr>
+<td>Thursday</td>
+<td>Statistical inference review</td>
+<td>Statistical inference review</td>
+<td>AE 03</td>
+</tr>
+</tbody>
+</table>
+<h2 id="readings">Readings&nbsp;<a class="hanchor" ariaLabel="Anchor" href="#readings">🔗&#xFE0E;</a> </h2>
+<table>
+<thead>
+<tr>
+<th></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Introduction to Modern Statistics (IMS) <a href="https://openintro-ims.netlify.app/inference-num.html#one-mean-math">Section 7.1.2</a></td>
+</tr>
+<tr>
+<td>IMS <a href="https://openintro-ims.netlify.app/inference-num.html#differenceOfTwoMeans">Section 7.2 - 7.4</a></td>
+</tr>
+</tbody>
+</table>
+<h2 id="assignments">Assignments&nbsp;<a class="hanchor" ariaLabel="Anchor" href="#assignments">🔗&#xFE0E;</a> </h2>
+<table>
+<thead>
+<tr>
+<th></th>
+<th></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Lab 01</td>
+<td><strong>due Sun, Jan 31 at 11:59p EST</strong></td>
+</tr>
+<tr>
+<td>Complete All About You survey</td>
+<td><strong>due Sun, Jan 31 at 11:59p EST</strong></td>
+</tr>
+</tbody>
+</table>
 
 
       </div>
