--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -416,11 +416,10 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Tue, Jan 26</td>
-            <td style="width:40%;text-align:left">Multivariable relationships</td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-laptop fa-lg"></i></font>
-            </td>
+            <td style="width:40%;text-align:left">Exploring multivariable relationships</td>
+            <td align="center" style="width:10%;text-align:center"><a
+                    href="/slides/02-multivar-relationships.html">
+                    <i class="fas fa-laptop fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="far fa-file-code fa-lg"></i></font>
